Fix alignment issue

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,6 +1,7 @@
 .home-container {
   display: flex;
   flex-direction: column;
+  min-height: 80vh;
 }
 
 .home-card {
