--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -1,13 +1,14 @@
 .projects-container {
   display: flex;
   flex-direction: column;
+  min-height: 80vh;
 }
 
 .project-card {
   min-width: 800px;
   width: 100%;
   height: 240px;
-  margin: auto;
+  margin: 3% auto;
   
   background-color: rgba(205, 202, 202, 0.4);
   border-radius: 9px;
